@@ -1,3 +1,12 @@
+2007-01-14  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/gplt_x11.c (pr_encoding) term/x11.trm share/Gnuplot.app-defaults:
+	Gnuplot_x11 has been using a default encoding *-* for x11 fonts. There
+	is a bug in xorg-7.1 that causes this to fail. So we now provide an
+	optional X-resource that can be used to set the default encoding to
+	something else.  E.g.:
+	    echo "gnuplot*encoding: iso8859-15" | xrdb -merge
+
 2007-01-10  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c (PaletteSetColor): Update current color in 
